<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sicks300_ros2_scan_merger</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="frknbyrm05@gmail.com">furkan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <depend>pcl_conversions</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>rcutils</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
	<depend>diagnostic_msgs</depend>
	<depend>nav2_util</depend>
	<exec_depend>ros2launch</exec_depend>
	<exec_depend>laser_filters</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
